force-app/main/default/objects/servey_response__c/servey_response__c.object-meta.xml
<CustomObject>
    <label>servey response</label>
    <nameField>
        <label>servey response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>servey responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>