force-app/main/default/objects/servey_response__c/fields/comments_about_your_acquisition__c.field-meta.xml
<CustomField>
    <fullName>comments_about_your_acquisition__c</fullName>
    <label>comments about your acquisition?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>