force-app/main/default/objects/servey_response__c/fields/How_we_can_reach_out__c.field-meta.xml
<CustomField>
    <fullName>How_we_can_reach_out__c</fullName>
    <label>How we can reach out</label>
    <type>Email</type>
</CustomField>