force-app/main/default/objects/servey_response__c/fields/Parent_Lead__c.field-meta.xml
<CustomField>
    <fullName>Parent_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>servey responses</relationshipLabel>
    <relationshipName>servey_responses</relationshipName>
    <type>Lookup</type>
</CustomField>