force-app/main/default/objects/servey_response__c/fields/Rate_us_out_of_5__c.field-meta.xml
<CustomField>
    <fullName>Rate_us_out_of_5__c</fullName>
    <label>Rate us out of 5</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>