force-app/main/default/objects/servey_response__c/fields/Total_deal_currency__c.field-meta.xml
<CustomField>
    <fullName>Total_deal_currency__c</fullName>
    <label>Total deal size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>